Fixes share button overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1307,6 +1307,7 @@ body {
   font-size: 1.5em; }
 
 .page-content .share-button.sharer-0 {
+  margin-bottom: 2em;
   text-align: center;
   width: auto; }
 
