--- a/assets/sass/components/_social-sharing.scss
+++ b/assets/sass/components/_social-sharing.scss
@@ -1,4 +1,5 @@
 .page-content .share-button.sharer-0 {
+  margin-bottom: 2em;
   text-align: center;
   width: auto;
 }
